Rework db migrations. Add update/get user settings APIs. Refactor user login API to return user settings. Modify user registration API to create default account and categories automatically. Add icon field to category table and API requests and responses. Add API for getting available category icons.
