# models/category.go
@@ -9,6 +9,7 @@ type Category struct {
 	ParentID    int64     `json:"categoryId"`
 	Name        string    `json:"name"`
 	Description string    `json:"description"`
+	Icon        string    `json:"icon"`
 	CreatedAt   time.Time `json:"createdAt"`
 	UpdatedAt   time.Time `json:"updatedAt"`
 }
@@ -19,26 +20,29 @@ type CategoryTree struct {
 	ParentID    int64           `json:"-"`
 	Name        string          `json:"name"`
 	Description string          `json:"description"`
+	Icon        string          `json:"icon"`
 	CreatedAt   time.Time       `json:"createdAt"`
 	UpdatedAt   time.Time       `json:"updatedAt"`
 	Children    []*CategoryTree `json:"children"`
 }
 
-func NewCategory(userID, accountID, parentID int64, name, description string) *Category {
+func NewCategory(userID, accountID, parentID int64, name, description, icon string) *Category {
 	return &Category{
 		UserID:      userID,
 		AccountID:   accountID,
 		ParentID:    parentID,
 		Name:        name,
 		Description: description,
+		Icon:        icon,
 		CreatedAt:   time.Now().UTC(),
 		UpdatedAt:   time.Now().UTC(),
 	}
 }
 
-func (c *Category) Update(parentID int64, name, description string) {
+func (c *Category) Update(parentID int64, name, description, icon string) {
 	c.ParentID = parentID
 	c.Name = name
 	c.Description = description
+	c.Icon = icon
 	c.UpdatedAt = time.Now().UTC()
 }
